# CocoJamboShop

./: .gitignore  Readme.md  pyproject.toml  requirements.txt
cocoshop/: .dockerignore  Readme.md  data.json  db.sqlite3  docker-compose.yaml  dockerfile  init-db.sql  requirements.txt
cocoshop/cocoshop/: asgi.py  manage.py  settings.py  urls.py  wsgi.py
cocoshop/shop/: admin.py  forms.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
cocoshop/shop/migrations/: 0001_initial.py  0002_emailverificationtoken.py  0003_chatroom_chatmessage.py  0004_order_address_order_city_order_email_order_full_name_and_more.py
cocoshop/shop/services/: cartoperations.py  liked.py  services.py
cocoshop/shop/sql/: mydb.sql  sqlsqript.txt
cocoshop/shop/static/css/: loginStyle.css  purchaseStyle.css  registrationStyle.css  shoppingCartStyle.css  styleMain.css
cocoshop/shop/templates/: base.html  package-lock.json  package.json
cocoshop/shop/templates/email/: verification.html
cocoshop/shop/templates/login/: login.html
cocoshop/shop/templates/main/: index.html  liked.html  shoppingCart.html
cocoshop/shop/templates/products/: product_confirm_delete.html  product_detail.html  product_form.html
cocoshop/shop/templates/registration/: register.html
cocoshop/shop/templates/src/: App.js
cocoshop/shop/templates/users/: user_confirm_delete.html  user_detail.html  user_form.html  user_list.html
cocoshop/shop/tests/: product_test.py  tests.py  user_test.py
cocoshop/shop/views/: product_views.py  productviews.py  users_views.py  views.py
(+13 files in other folders)
